cooked in the cloud

--- a/franklin_cooked/OEBPS/about_author.xhtml
+++ b/franklin_cooked/OEBPS/about_author.xhtml
@@ -8,4 +8,26 @@
 
 <h1>About Ann Author</h1>
 
+  <p><br/></p>
+     <p class="left">John Cobo grew up on Oregon, USA where he studied Science and Mathematics at Oregon State University. He arrived in the U.K. by accident what is now a 29 year short break before graduate school. He now lives with his wife, two children and a golden retriever near Cambridge, U.K.</p>
+
+  <p><br/></p>
+     <p class="left">Follow the author at http://cobobook.com.</p>
+
+  <p><br/></p>
+     <p class="left">If you enjoyed Heads and Tails, please tell your friends and spread the word with a review.</p>
+
+  <p><br/></p>
+     <p>John</p>
+
+<hr/>
+<p class="centered"><span class="ipadcenterfix">Purchased by: A. Reader on 2015-03-16 for $4.99.</span></p>
+<p class="centered"><span class="ipadcenterfix">Thank you.</span></p>
+<p class="centered">What did you think of this book:</p>
+ <ul>
+   <li><a href="http://jcobobooks.com/frt553tge3ss6/lovedit">Loved it, show me more!</a></li>
+   <li><a href="http://jcobobooks.com/frt553tge3ss6/notforme">Not for me</a></li>
+ </ul>
+
+<hr/>
 </section></body></html>
