--- a/franklin_cooked/OEBPS/dedication.xhtml
+++ b/franklin_cooked/OEBPS/dedication.xhtml
@@ -8,5 +8,8 @@
 <body>
 <div id="h2-9"><h1>Dedication</h1></div>
 
+  <p><br/></p>
+     <p>Dedicated to my daughter, without whom the settings on my computers would remain reliably stagnant.</p>
+
 </body>
 </html>
