--- a/franklin_cooked/OEBPS/description.xhtml
+++ b/franklin_cooked/OEBPS/description.xhtml
@@ -6,5 +6,17 @@
 <body>
 <div id="h2-9"><h1>Description of franklin</h1></div>
 
+    <p class="left">This book is the result of an unsettling feeling that the ways of the world we see around us are not inevitable, in fact, are merely a cosmic joke.</p>
+
+    <p><br/></p>
+
+    <p>John Cobo</p>
+
+    <p>Director of Ironic Affairs (retired)</p>
+
+    <p>Phlogistic Memories</p>
+
+    <p>Tokyo, Japan</p>
+
 </body>
 </html>
