cooked in the cloud

--- a/franklin_cooked/OEBPS/cover.xhtml
+++ b/franklin_cooked/OEBPS/cover.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-  <title>franklin</title>
+  <title>Heads and Tails</title>
   <link rel="stylesheet" type="text/css" href="css/epub-stylesheet.css"/>
   <meta charset="utf-8"/>
   <style type="text/css">
