--- a/franklin_cooked/OEBPS/about_author.xhtml
+++ b/franklin_cooked/OEBPS/about_author.xhtml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-<title>franklin</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
+<title>Heads and Tails</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
 <meta charset="utf-8"/>
 </head>
 <body>
 <section class="frontmatter-rw Introduction-rw" epub:type="frontmatter">
 
-<h1>About Ann Author</h1>
+<h1>About John Cobo</h1>
 
   <p><br/></p>
      <p class="left">John Cobo grew up on Oregon, USA where he studied Science and Mathematics at Oregon State University. He arrived in the U.K. by accident what is now a 29 year short break before graduate school. He now lives with his wife, two children and a golden retriever near Cambridge, U.K.</p>
