cooked in the cloud

--- a/franklin_cooked/OEBPS/about_author.xhtml
+++ b/franklin_cooked/OEBPS/about_author.xhtml
@@ -21,7 +21,7 @@
      <p>John</p>
 
 <hr/>
-<p class="centered"><span class="ipadcenterfix">Purchased by: A. Reader on 2015-04-16 for $4.99.</span></p>
+<p class="centered"><span class="ipadcenterfix">Purchased by: Example Reader on 2015-03-16 for $4.99.</span></p>
 <p class="centered"><span class="ipadcenterfix">Thank you.</span></p>
 <p class="centered">What did you think of this book:</p>
  <ul>
