cooked in the cloud

--- a/franklin_cooked/OEBPS/content/table_of_contents.xhtml
+++ b/franklin_cooked/OEBPS/content/table_of_contents.xhtml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-<<<<<<< HEAD
-  <title>franklin</title>
-=======
-  <title>Heads and Tails</title>
->>>>>>> ba46ba4fd2244d6bb462ecdb2454d469722d3f7f
+  <title>Franklin</title>
   <link rel="stylesheet" type="text/css" href="../css/epub-stylesheet.css"/>
   <meta charset="utf-8"/>
 </head>
@@ -22,11 +18,6 @@
   <li class="toc_matter"><a href="../dedication.xhtml">Dedication</a></li>
 
 
-<<<<<<< HEAD
-    <li class="toc_chapter_no_parts"><a href="chap001.xhtml#h2-1">The First Chapter</a></li>
-    <li class="toc_chapter_no_parts"><a href="chap002.xhtml#h2-2">The Second Chapter</a></li>
-    <li class="toc_chapter_no_parts"><a href="chap003.xhtml#h2-3">The Third Chapter</a></li>
-=======
   <li class="toc_part"><a href="chap001.xhtml#part">Part One</a>
   <ol class="toc">
     <li class="toc_chapter_with_parts"><a href="chap001.xhtml#h2-1">Lord Rayleigh</a></li>
@@ -71,15 +62,11 @@
     <li class="toc_chapter_with_parts"><a href="chap030.xhtml#h2-30">Jerome</a></li>
     </ol>
   </li>
->>>>>>> ba46ba4fd2244d6bb462ecdb2454d469722d3f7f
 
 
   <li class="toc_matter"><a href="../description.xhtml">Description</a></li>
   <li class="toc_matter"><a href="../about_author.xhtml">About Author</a></li>
-<<<<<<< HEAD
-=======
   <li class="toc_matter"><a href="../copyright.xhtml">Copyright</a></li>
->>>>>>> ba46ba4fd2244d6bb462ecdb2454d469722d3f7f
 </ol>
 </nav>
 <nav xmlns:epub="http://www.idpf.org/2007/ops" epub:type="landmarks" id="guide" hidden="hidden">
