--- a/franklin_cooked/OEBPS/copyright.xhtml
+++ b/franklin_cooked/OEBPS/copyright.xhtml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-  <title>Heads and Tails</title>
+  <title>Franklin</title>
   <link rel="stylesheet" type="text/css" href="css/epub-stylesheet.css"/>
   <meta charset="utf-8"/>
 </head>
 <body>
 <div id="h2-9"><h1>Copyright</h1></div>
 <p>&#160;</p>
-<p class="centered">Copyright © 2015 by John Cobo</p>
+<p class="centered">Copyright © 2015 by Ann Author</p>
 <p>&#160;</p>
 <p class="centered">All rights reserved. This book or any portion thereof may not be reproduced or used in any manner whatsoever without the express written permission of the publisher except for the use of brief quotations in a book review.
 </p>
