--- a/franklin_cooked/OEBPS/description.xhtml
+++ b/franklin_cooked/OEBPS/description.xhtml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-<<<<<<< HEAD
-<title>franklin</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
+<title>Franklin</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
 <meta charset="utf-8"/>
 </head>
 <body>
-<div id="h2-9"><h1>Description of franklin</h1></div>
-=======
-<title>Heads and Tails</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
-<meta charset="utf-8"/>
-</head>
-<body>
-<div id="h2-9"><h1>Description of Heads and Tails</h1></div>
+<div id="h2-9"><h1>Description of Franklin</h1></div>
 
     <p class="left">This book is the result of an unsettling feeling that the ways of the world we see around us are not inevitable, in fact, are merely a cosmic joke.</p>
 
@@ -24,7 +17,6 @@
     <p>Phlogistic Memories</p>
 
     <p>Tokyo, Japan</p>
->>>>>>> ba46ba4fd2244d6bb462ecdb2454d469722d3f7f
 
 </body>
 </html>
