--- a/franklin_cooked/OEBPS/about_author.xhtml
+++ b/franklin_cooked/OEBPS/about_author.xhtml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-<<<<<<< HEAD
-<title>franklin</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
-=======
-<title>Heads and Tails</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
->>>>>>> ba46ba4fd2244d6bb462ecdb2454d469722d3f7f
+<title>Franklin</title><link rel="stylesheet" href="css/epub-stylesheet.css" type="text/css"/>
 <meta charset="utf-8"/>
 </head>
 <body>
 <section class="frontmatter-rw Introduction-rw" epub:type="frontmatter">
 
-<<<<<<< HEAD
 <h1>About Ann Author</h1>
-
-=======
-<h1>About John Cobo</h1>
 
   <p><br/></p>
      <p class="left">John Cobo grew up on Oregon, USA where he studied Science and Mathematics at Oregon State University. He arrived in the U.K. by accident what is now a 29 year short break before graduate school. He now lives with his wife, two children and a golden retriever near Cambridge, U.K.</p>
@@ -29,7 +21,7 @@
      <p>John</p>
 
 <hr/>
-<p class="centered"><span class="ipadcenterfix">Purchased by: A. Reader on 2015-03-16 for $4.99.</span></p>
+<p class="centered"><span class="ipadcenterfix">Purchased by: Joe Smith on 2015-03-16 for $4.99.</span></p>
 <p class="centered"><span class="ipadcenterfix">Thank you.</span></p>
 <p class="centered">What did you think of this book:</p>
  <ul>
@@ -38,5 +30,4 @@
  </ul>
 
 <hr/>
->>>>>>> ba46ba4fd2244d6bb462ecdb2454d469722d3f7f
 </section></body></html>
