cooked in the cloud

--- a/franklin_cooked/OEBPS/content/title_page.xhtml
+++ b/franklin_cooked/OEBPS/content/title_page.xhtml
@@ -13,7 +13,7 @@
 
     <hr/>
 	  <p class="centered"><span class="ipadcenterfix">Delivered to: john.cobo@gmail.com on 2015-03-16.</span></p>
-    <p class="centered"><span class="ipadcenterfix">Purchased by: Joe Smith for $4.99.</span></p>
+    <p class="centered"><span class="ipadcenterfix">Purchased by: Joe Jones for $4.99.</span></p>
     <p class="centered"><span class="ipadcenterfix">Thank you.</span></p>
     <hr/>
 
